# ray-storm

./: .gitignore  CMakeLists.txt  README.md
include/camera/: AbstractCamera.h  AbstractFlatLens.h  AbstractSingleImageCamera.h  ApertureLens.hpp  CameraFactory.h  CameraSetup.hpp  LensFactory.h  PinholeCamera.h  RayPackage.hpp  SampleRay.hpp  SimpleLens.hpp  ThinLensCamera.h  ThinLensCameraSetup.hpp
include/datastructures/: List.hpp  SpatialDatastructure.h
include/dispatchers/: AbstractObjectDispatcher.h  EmittanceDeciderDispatcher.hpp  EmittanceDispatcher.hpp
include/geometry/: AbstractSurfaceNormalModifier.h  AxisAlignedBox.hpp  Bounded.hpp  Box.hpp  BumpMap.hpp  DistSphere.hpp  Emitter.h  Emitting.h  Intersectable.h  Intersection.hpp  Marchable.h  MarchableUnion.hpp  MaterialInteraction.h  ModifiableSurface.h  Object.h  Plane.hpp  Ray.hpp  RayMarcher.hpp  Rectangle.hpp  Reflector.h  Renderable.h  SimpleIntersection.hpp  Sphere.hpp  SpherePrimitive.hpp  SurfaceNormalModifierFactory.h
include/integrators/: AbstractIntegrator.h  AbstractIntegratorGenerator.h  BidirectionalPathTracer.h  BidirectionalPathTracerGenerator.h  DirectLightingPathTracer.h  DirectLightingPathTracerGenerator.h  EmittanceDispatcher.hpp  IntegratorFactory.h  IntegratorGeneratorFactory.h  LightPathTracer.h  LightPathTracerGenerator.h  PathTraceHelper.h  PathTraceVertex.hpp  PathTraceVertexFunctions.hpp  PathTracer.h  PathTracerGenerator.h  RandomWalk.hpp
include/materials/: AbstractBRDF.h  AbstractBSDF.h  AbstractBTDF.h  AbstractBxDF.hpp  AbstractMaterial.h  AbstractSVBxDF.h  (+20 more)
src/: main.cpp
(+93 files in other folders)
